--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.5",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "framer-motion": "^12.9.4",
     "maath": "^0.10.8",
-    "motion": "^12.9.4",
+    "motion": "^12.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-responsive": "^10.0.1",
