--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "framer-motion": "^12.9.4",
+    "lucide-react": "^0.511.0",
     "maath": "^0.10.8",
     "motion": "^12.15.0",
     "react": "^19.0.0",
